# PP-shop

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
cart/: admin.py  cart.py  context_processors.py  forms.py  models.py  payments.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_order_user.py  0003_order_delivery_date.py  0004_order_hidden_from_history_alter_order_status.py  0005_order_payment_fields.py  0006_alter_order_status.py  0007_order_delivery_apartment_order_delivery_city_and_more.py  0008_order_fulfillment_method.py  0009_savedcart.py
cart/static/cart/: cart.js
cart/templates/cart/: checkout.html  detail.html  payment_result.html
catalog/: admin.py  models.py  tests.py  urls.py  views.py
catalog/management/commands/: seed_demo_data.py
catalog/migrations/: 0001_initial.py  0002_add_product_details.py  0003_product_stock.py  0004_fixed_categories_product_image_and_dimensions.py  0005_productimage.py
catalog/static/catalog/: catalog-filters.js  catalog.css  favorites.js  product-gallery.js
catalog/static/catalog/admin/: product_form.js
catalog/templates/: base.html
catalog/templates/catalog/: about.html  contacts.html  home.html  product_detail.html  product_list.html
config/: admin.py  apps.py  settings.py  urls.py
users/: admin.py  admin_forms.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_favorite.py  0003_productrecommendation.py
users/templates/users/: auth_base.html  login.html  profile.html  register.html
(+6 files in other folders)
